test/libsolidity/syntaxTests/structs/recursion/struct_definition_directly_recursive.sol
contract Test {
    struct MyStructName {
        address addr;
        MyStructName x;
    }
}
// ----
// TypeError: (20-93): Recursive struct definition.
